# OXYGEN-SDK-SerialCsv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: cmake.yml
firmware/: CMakeLists.txt
firmware/embedded-csv-node/: CMakeLists.txt
firmware/embeddedcsvnode/: CMakeLists.txt  create_arduino_library.py  library.properties  readme.md
firmware/embeddedcsvnode/example/: custom_node.ino  example.ino
firmware/embeddedcsvnode/src/: Channel.h  CsvNode.cpp  CsvNode.h  CsvNodeProfile.h  DefaultArduinoCsvNode.cpp  etl_profile.h
firmware/embeddedcsvnode/src/details/: Registry.h  Visitors.h
firmware/serialcvsnode/: CMakeLists.txt  create_arduino_library.py  library.properties  readme.md
firmware/serialcvsnode/examples/: example.ino
firmware/serialcvsnode/src/: CsvNode.h  CsvNodeProfile.h  etl_profile.h
firmware/serialcvsnode/src/details/: Registry.cpp
serialcsvplugin/: CMakeLists.txt  qml.qrc
serialcsvplugin/include/serialcsvplugin/: CsvAdvancedProtocolLineDecoder.h  CsvChannel.h  CsvDataLineDecoder.h  CsvDecoder.h  regex_util.h
serialcsvplugin/include/serialcsvplugin/details/: Common.h  SerialPort.h
serialcsvplugin/qml/: AddSerialCsvPort.qml
serialcsvplugin/src/: CsvAdvancedProtocolLineDecoder.cpp  CsvDataLineDecoder.cpp  CsvDecoder.cpp  SerialCsvPlugin.cpp  SerialPort.cpp
test/: CMakeLists.txt  OptionalIntegrationTestSerialPort.cpp  SerialMock.h  TestCsvAdvancedProtocolLineDecoder.cpp  TestCsvDataLineDecoder.cpp  TestCsvRx.cpp  TestFirmware.cpp  TestFirmwareErrors.cpp  TestFirmwareExample.cpp  main.cpp
